Agregada biblioteca de pines

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,15 @@
 cmake_minimum_required( VERSION 2.8 )
-project( Embedded-Socket-server )
-add_executable( server main.c ./src/base64.c ./src/photo.c ./src/lights.c ./src/doors.c)
-add_executable( client client.c )
+
+project( Embedded-Socket-Server )
+
+add_subdirectory(lib)
+
+include_directories(${PROJECT_SOURCE_DIR}/include)
+include_directories(${PROJECT_SOURCE_DIR}/lib)
+
+add_executable(server main.c ./src/base64.c ./src/photo.c ./src/lights.c ./src/doors.c)
+
+link_directories(/home/root/server/build/usr/bin)
+target_link_libraries(server gpio)
+
+install (TARGETS server DESTINATION bin)
