Cambio de dimensiones

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,8 @@ add_subdirectory(lib)
 include_directories(${PROJECT_SOURCE_DIR}/include)
 include_directories(${PROJECT_SOURCE_DIR}/lib)
 
-add_executable(server main.c ./src/base64.c ./src/photo.c ./src/lights.c ./src/doors.c)
+add_executable(houseserv main.c ./src/base64.c ./src/photo.c ./src/lights.c ./src/doors.c)
 
-target_link_libraries(server gpio)
+target_link_libraries(houseserv gpio)
 
 install (TARGETS server DESTINATION bin)
