--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,6 @@ include_directories(${PROJECT_SOURCE_DIR}/lib)
 
 add_executable(houseserv main.c ./src/base64.c ./src/photo.c ./src/lights.c ./src/doors.c ./src/user.c)
 
-target_link_libraries(houseserv gpio)
+target_link_libraries(houseserv gpio pthread)
 
 install (TARGETS houseserv DESTINATION bin)
